--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,7 +52,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
-          images: teletracking/cert-exporter
+          images: docker.teledev.io/cert-exporter
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
