--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -60,6 +60,9 @@ jobs:
           context: .
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
+          tags: [
+            ${{ steps.chart-releaser.outputs.chart_version }},
+            "latest"
+            ]
           labels: ${{ steps.meta.outputs.labels }}
           
