--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -60,6 +60,7 @@ jobs:
           context: .
           platforms: linux/amd64,linux/arm64
           push: true
+          registry: docker.teledev.io
           tags: "latest"
           labels: ${{ steps.meta.outputs.labels }}
           
