--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,12 +41,6 @@ jobs:
         env:
           CR_TOKEN: "${{ secrets.TELECI_GITHUB_TOKEN }}"
 
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          registry: docker.teledev.io
-          username: ${{ secrets.DOCKER_USER }}
-          password: ${{ secrets.DOCKER_PASS }}
 
       - name: Extract metadata (tags, labels) for Docker
         id: meta
@@ -54,12 +48,33 @@ jobs:
         with:
           images: docker.teledev.io/cert-exporter
 
-      - name: Build and push Docker image
+      - name: Build Docker image
+        id: build
         uses: docker/build-push-action@v4
         with:
           context: .
           platforms: linux/amd64,linux/arm64
-          push: true
+          push: false
           tags: "latest"
           labels: ${{ steps.meta.outputs.labels }}
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          registry: docker.teledev.io
+          username: ${{ secrets.DOCKER_USER }}
+          password: ${{ secrets.DOCKER_PASS }}
+
+
+    - name: Push Docker image
+      uses: docker/build-push-action@v4
+      with:
+        context: .
+        platforms: linux/amd64,linux/arm64
+        push: true
+        tags: "latest"
+        labels: ${{ steps.meta.outputs.labels }}
+        image: ${{ steps.build.outputs.DOCKER_IMAGE_ID }}
+
+      
           
