--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,7 +52,7 @@ jobs:
         with:
           context: .
           platforms: linux/amd64,linux/arm64
-          load: true
+          push: false
           tags: docker.teledev.io/cert-exporter:latest
           labels: ${{ steps.meta.outputs.labels }}
 
