--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -64,10 +64,5 @@ jobs:
           password: ${{ secrets.DOCKER_PASS }}
 
       - name: Push Docker image
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          platforms: linux/amd64,linux/arm64
-          push: true
-          tags: docker.teledev.io/cert-exporter:latest
-          labels: ${{ steps.meta.outputs.labels }}
+        run: |
+          docker push docker.teledev.io/cert-exporter:latest
