--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,13 +48,8 @@ jobs:
           images: docker.teledev.io/cert-exporter
 
       - name: Build Docker image
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          platforms: linux/amd64,linux/arm64
-          push: false
-          tags: docker.teledev.io/cert-exporter:latest
-          labels: ${{ steps.meta.outputs.labels }}
+        run: |
+          docker build . -t docker.teledev.io/cert-exporter:latest
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
