--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,16 +40,11 @@ jobs:
           charts_dir: helm
         env:
           CR_TOKEN: "${{ secrets.TELECI_GITHUB_TOKEN }}"
-
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
-        with:
-          images: docker.teledev.io/cert-exporter
+        outputs: | type=json,dest=versions
 
       - name: Build Docker image
         run: |
-          docker build . -t docker.teledev.io/cert-exporter:latest
+          docker build . -t docker.teledev.io/cert-exporter:${{ steps.chart-releaser.outputs.versions }} -t docker.teledev.io/cert-exporter:latest
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
@@ -60,4 +55,4 @@ jobs:
 
       - name: Push Docker image
         run: |
-          docker push docker.teledev.io/cert-exporter:latest
+          docker push docker.teledev.io/cert-exporter --all-tags
