--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,15 +36,15 @@ jobs:
 
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.0.0
+        id: chart-releaser
         with:
           charts_dir: helm
         env:
           CR_TOKEN: "${{ secrets.TELECI_GITHUB_TOKEN }}"
-        outputs: | type=json,dest=versions
 
       - name: Build Docker image
         run: |
-          docker build . -t docker.teledev.io/cert-exporter:${{ steps.chart-releaser.outputs.versions }} -t docker.teledev.io/cert-exporter:latest
+          docker build . -t docker.teledev.io/cert-exporter:${{ steps.chart-releaser.outputs.chart_version }} -t docker.teledev.io/cert-exporter:latest
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
