--- a/helm/cert-exporter/Chart.yaml
+++ b/helm/cert-exporter/Chart.yaml
@@ -4,4 +4,4 @@ description: Monitors and exposes PKI information as Prometheus metrics
 
 type: application
 version: 3.4.1
-appVersion: v2.11.1
+appVersion: latest
