--- a/helm/cert-exporter/values.yaml
+++ b/helm/cert-exporter/values.yaml
@@ -8,7 +8,7 @@ certManager:
   # label2: test
 
   image:
-    repository: joeelliott/cert-exporter
+    repository: docker.teledev.io/cert-exporter
     # The default tag is ".Chart.AppVersion", only set "tag" to override that
     tag: 
     pullPolicy: IfNotPresent
