--- a/test/cert-manager/certs.yaml
+++ b/test/cert-manager/certs.yaml
@@ -62,6 +62,8 @@ metadata:
   name: test
   annotations:
     test: test
+  labels:
+    serviceline: test
 ---
 apiVersion: admissionregistration.k8s.io/v1
 kind: MutatingWebhookConfiguration
@@ -83,7 +85,7 @@ webhooks:
     failurePolicy: Ignore
     sideEffects: None
     rules:
-      - operations: [ "CREATE" ]
+      - operations: ["CREATE"]
         apiGroups: ["core", ""]
         apiVersions: ["*"]
         resources: ["persistentvolumeclaims"]
